--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -131,3 +131,12 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+
+# Server runtime deps (FastAPI app + JWT + hashing + Mongo + uploads)
+fastapi==0.115.0
+uvicorn==0.30.6
+python-dotenv==1.0.1
+python-jose==3.3.0
+passlib==1.7.4
+motor==3.6.0
+python-multipart==0.0.9
