--- a/web-app/package.json
+++ b/web-app/package.json
@@ -2,6 +2,7 @@
   "name": "web-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -22,6 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "npx --yes serve -s build -l 3000",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
