--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,5 @@ MONGO_URL=mongodb://127.0.0.1:27017/ai_companion
 OPENAI_API_KEY=
 EMERGENT_LLM_KEY=
 PERPLEXITY_API_KEY=
-TAVILY_API_KEY=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
+TAVILY_API_KEY=
+REACT_APP_BACKEND_URL=https://ai-i15.vercel.app/
