Commit changes to fix shntax errors

--- a/web-app/.env
+++ b/web-app/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=https://legendary-space-waffle-wr4g5g454xqwh9qwq-8001.app.github.dev
+REACT_APP_BACKEND_URL=https://ai-i15.vercel.app/
