Commit web address issue of blank page

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "api:start": "uvicorn backend.server:app --host 0.0.0.0 --port 8001",
 
     "web:build": "npm --prefix web-app ci && npm --prefix web-app run build",
-    "web:start:prod": "npx --yes serve -s web-app/build -l 3000",
+    "web:start:prod": "npx --yes serve -s web-app/build -l tcp://0.0.0.0:3000",
 
     "pwa:build": "npm run web:build",
     "pwa:serve": "npm run web:start:prod"
