--- a/web-app/.env
+++ b/web-app/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=https://ai-i15.vercel.app/
+# Leave this empty to auto-detect backend in Codespaces/local (:8001) or set to your deployed API base URL (https://your-api.example.com)
+REACT_APP_BACKEND_URL=
